[gd_scene load_steps=8 format=3 uid="uid://fc60abbvfd7h"]

[ext_resource type="Script" uid="uid://6vb2q4dgxtjs" path="res://scripts/enter.gd" id="1_bmkq5"]
[ext_resource type="Texture2D" uid="uid://caowplirn50pl" path="res://images/pixels-enter-bg.png" id="2_fwd0c"]
[ext_resource type="FontFile" uid="uid://d3uyqpog4e48d" path="res://fonts/VCR_OSD_MONO_1.001.ttf" id="3_tr22a"]
[ext_resource type="Theme" uid="uid://bchb86aupcrnb" path="res://blue_theme.tres" id="4_vlai7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slh5u"]
bg_color = Color(0.358095, 0.637507, 0.790995, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4p4n"]
bg_color = Color(0.356863, 0.639216, 0.792157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bmkq5"]
bg_color = Color(0.454342, 0.721689, 0.868987, 1)

[node name="enter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmkq5")

[node name="Pixels-enter-bg" type="Sprite2D" parent="."]
position = Vector2(600, 344)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_fwd0c")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -280.0
offset_right = 512.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_fonts/font = ExtResource("3_tr22a")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_slh5u")
text = "Pixels: The Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.5
offset_top = -24.0
offset_right = 225.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vlai7")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("3_tr22a")
theme_override_font_sizes/font_size = 60
theme_override_styles/pressed = SubResource("StyleBoxFlat_n4p4n")
text = "Play"

[node name="How2PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.5
offset_top = 136.0
offset_right = 225.5
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vlai7")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("3_tr22a")
theme_override_font_sizes/font_size = 65
text = "How to Play"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -516.0
offset_top = -292.0
offset_right = 516.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vlai7")
theme_override_styles/panel = SubResource("StyleBoxFlat_bmkq5")

[node name="How2PlayLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -292.0
offset_right = 188.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vlai7")
theme_override_font_sizes/font_size = 50
text = "How to Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="How2PlayDescription" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -172.0
offset_right = 416.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vlai7")
theme_override_font_sizes/font_size = 40
text = "W,A,S,D (up, left, down, right) for Boss Level and House Level movement
W, A, S, D (jump, left, dive, right) for Levels 1, 2, and 4)
Press T or Left Mouse Button to Attack"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CloseHow2Play" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 932.0
offset_top = 32.0
offset_right = 1004.0
offset_bottom = 96.0
theme = ExtResource("4_vlai7")
theme_override_font_sizes/font_size = 40
text = "X"

[node name="CreditsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -516.0
offset_top = -292.0
offset_right = 516.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vlai7")
theme_override_styles/panel = SubResource("StyleBoxFlat_bmkq5")

[node name="CreditsHeading" type="Label" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -292.0
offset_right = 188.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vlai7")
theme_override_font_sizes/font_size = 50
text = "Credits
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsDescription" type="Label" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -172.0
offset_right = 416.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_vlai7")
theme_override_font_sizes/font_size = 40
text = "Game made by Savagerunderscorelex (Github)
Inspired by the piece \"Pixels\" by Randall Standridge"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CloseCredits" type="Button" parent="CreditsPanel"]
layout_mode = 0
offset_left = 932.0
offset_top = 32.0
offset_right = 1004.0
offset_bottom = 96.0
theme = ExtResource("4_vlai7")
theme_override_font_sizes/font_size = 40
text = "X"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="How2PlayButton" to="." method="_on_how_2_play_button_pressed"]
[connection signal="pressed" from="Panel/CloseHow2Play" to="." method="_on_close_how_2_play_pressed"]
